# helloAssoManager

./: .gitignore  CLAUDE.md  README.md  SECURITY_CHECK.md  db.sqlite3  pyproject.toml  railway.toml
common/api/: event_form_order_schema.json  event_form_schema.json  helloAssoApi.py
config/: settings.py  urls.py
deploy/: DEPLOY.md  env.example  helloasso.service  nginx.conf
helloAssoImporter/: adherents_urls.py  admin.py  apps.py  membres_urls.py  models.py  tests.py  urls.py  views.py
helloAssoImporter/migrations/: 0001_initial.py  0002_eventform.py  0002_membershipformorder_emergency_contact_name_and_more.py  0003_eventformorder.py  0003_member_medical_certificate_date.py  0004_eventformorder_created_at_eventformorder_payer_email_and_more.py  0004_member_birthdate.py  0005_cursus_cursuscategory_skill_skillevaluation_and_more.py  0006_member_formations.py
helloAssoImporter/templates/: forms.html
helloAssoImporter/templates/helloAssoImporter/: adherent_detail.html  adherent_list.html  cursus_create.html  cursus_detail.html  event_form_create.html  event_form_detail.html  event_forms.html  formation.html  formation_import.html  (+10 more)
templates/: base.html  home.html
templates/account/: login.html  logout.html  signup.html
templates/userManagement/: accept_invite.html  change_password.html  invite.html  user_list.html  user_role_form.html
userManagement/: admin.py  apps.py  models.py  urls.py  views.py
userManagement/migrations/: 0001_initial.py  0002_customuser_invite_token_customuser_invite_url.py  0003_remove_customuser_invite_url_and_more.py
(+1 files in other folders)
