[tool.poetry]
name = "tpmanagement"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.2.4"
requests = "^2.32.4"
dotenv = "^0.9.9"
django-tables2 = "^2.7.5"
django-allauth = "^65.14.3"
django-invitations = "^2.1.0"
gunicorn = "^23.0.0"
psycopg2-binary = "^2.9.10"
dj-database-url = "^2.3.0"
whitenoise = "^6.9.0"
helloasso-python = "^1.0.8"
authlib = "^1.6.9"
reportlab = "^4.4.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
